--- a/template.yml
+++ b/template.yml
@@ -31,6 +31,7 @@ Resources:
       Environment:
         Variables:
           AWS_NODEJS_CONNECTION_REUSE_ENABLED: "1"
+          DB_HOST: ""
       Handler: index.handler
       Runtime: nodejs14.x
     DependsOn:
